- Speed up the production of bootstrapped confidence bands for impulse 
  responses in VECM models
- Online help: ensure that option flags don't break across lines (and
  also colorize them for emphasis)
- Cointegration testing: treat restricted exogenous terms as per Ox and
  PcGive (don't lag them in the initial OLS regressions)
- Fix bug: possible crash in tsls when there are missing values and a
  regressor is all-zero at the complete observations
- Fix bug: "summary" command with --by option not respecting the
  incoming sample range
- Fix bug: filename encoding and dates recognition issues with the new
  xlsx data importer; also try harder to find sheet names/numbers
- Fix bug: segfault on running certain commands via the GUI after
  replacing the previous dataset with a new one
- Fix bug: crash on accessing a bundle via its icon if the bundle was
  replaced while the Icon view window was open
- Fix bug: crash on using the --quiet option with the "freq" command
  in a command loop
- Fix bug: breakage in processing the selection of quantiles for 
  quantile regression in the GUI
- Fix bug: the third argument to eigsolve() was rejected even when it
  was valid
- Fix bug: the option of providing a named list of series as the left-
  hand term in a GMM orthogonality condition was not fully implemented

2011-10-17 version 1.9.6
- Add an importer for xlsx (Office Open XML) worksheet data
- cum() function: make this respect panel structure
- ranking() function: accept vectors as well as series
- New function, hdprod(): implements "direct row product" for matrices
- New functions for series: skewness() and kurtosis()
- New function uniq(): acts like values() but leaves the distinct values
  in their order of appearance
- New function pshrink(): compacts a panel series to a column vector
  with one observation per individual
- New function randint(): returns a random integer in a specified closed
  interval