@@ -98,6 +98,9 @@ int user_matrix_replace_matrix (user_matrix *u, gretl_matrix *M);
 int user_matrix_replace_matrix_by_name (const char *name, 
 					gretl_matrix *M);
 
+int assign_scalar_to_submatrix (gretl_matrix *M, double x,
+				matrix_subspec *spec);
+
 int user_matrix_replace_submatrix (const char *mname, 
 				   const gretl_matrix *S,
 				   matrix_subspec *spec);
